--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
   <body>
     <header>
       <nav>
-        <img src="./images/logo.svg" alt="loopstudios en blanc et gras" />
+        <a href=""
+          ><img src="./images/logo.svg" alt="loopstudios en blanc et gras"
+        /></a>
+
         <ul>
           <li><a href="">About</a></li>
           <li><a href="">Careers</a></li>
@@ -34,24 +37,47 @@
       <h1>Immersive experiences that deliver</h1>
     </header>
     <main>
-      <section>
-        <h2>The leader in interactive VR</h2>
-        <p>
-          Founded in 2011, Loopstudios has been producing world-class virtual
-          reality projects for some of the best companies around the globe. Our
-          award-winning creations have transformed businesses through digital
-          experiences that bind to their brand.
-        </p>
+      <section class="interactive">
+        <img src="./images/desktop/image-interactive.jpg" alt="" />
+        <div class="interactive__description">
+          <h2>The leader in interactive VR</h2>
+          <p>
+            Founded in 2011, Loopstudios has been producing world-class virtual
+            reality projects for some of the best companies around the globe.
+            Our award-winning creations have transformed businesses through
+            digital experiences that bind to their brand.
+          </p>
+        </div>
       </section>
-      <section>
-        <div>
+      <section class="creations">
+        <div class="creations__title">
           <h2>Our creations</h2>
           <button>See all</button>
         </div>
-        <div>
-          <div>
-            <img src="" alt="" />
-            <h3>Deep</h3>
+        <div class="creations__list">
+          <div class="creation">
+            <h3>Deep earth</h3>
+          </div>
+          <div class="creation">
+            <h3>Deep earth</h3>
+          </div>
+          <div class="creation">
+            <h3>Deep earth</h3>
+          </div>
+          <div class="creation">
+            <h3>Deep earth</h3>
+          </div>
+          <div class="creation">
+            <h3>Deep earth</h3>
+          </div>
+          <div class="creation">
+            <h3>Deep earth</h3>
+          </div>
+          <div class="creation">
+            <h3>Deep earth</h3>
+          </div>
+          <div class="creation">
+            <h3>Deep earth</h3>
           </div>
         </div>
       </section>
@@ -77,7 +103,7 @@
         <p>© 2021 Loopstudios. All rights reserved.</p>
       </div>
     </footer>
-    <!-- earth Night arcade Soccer team VR The grid From up above VR Pocket borealis
+    <!--  Night arcade Soccer team VR The grid From up above VR Pocket borealis
     The curiosity Make it fisheye -->
 
     <div class="attribution">
