--- a/index.html
+++ b/index.html
@@ -83,16 +83,20 @@
       </section>
     </main>
     <footer>
-      <div>
-        <img src="./images/logo.svg" alt="loopstudios en blanc et gras" />
+      <div class="footer__containers">
+        <img
+          class="logo"
+          src="./images/logo.svg"
+          alt="loopstudios en blanc et gras"
+        />
         <div>
-          <img src="./images/icon-facebook.svg" alt="" />
-          <img src="./images/icon-twitter.svg" alt="" />
-          <img src="./images/icon-pinterest.svg" alt="" />
-          <img src="./images/icon-instagram.svg" alt="" />
+          <img class="icon" src="./images/icon-facebook.svg" alt="" />
+          <img class="icon" src="./images/icon-twitter.svg" alt="" />
+          <img class="icon" src="./images/icon-pinterest.svg" alt="" />
+          <img class="icon" src="./images/icon-instagram.svg" alt="" />
         </div>
       </div>
-      <div>
+      <div class="footer__containers">
         <ul>
           <li><a href="">About</a></li>
           <li><a href="">Careers</a></li>
@@ -102,15 +106,14 @@
         </ul>
         <p>© 2021 Loopstudios. All rights reserved.</p>
       </div>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Your Name Here</a>.
+      </div>
     </footer>
     <!--  Night arcade Soccer team VR The grid From up above VR Pocket borealis
     The curiosity Make it fisheye -->
-
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div>
   </body>
 </html>
