--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         /></a>
 
         <ul>
-          <li><a href="">About</a></li>
-          <li><a href="">Careers</a></li>
-          <li><a href="">Events</a></li>
-          <li><a href="">Products</a></li>
-          <li><a href="">Support</a></li>
+          <li class="nav__link underline"><a href="">About</a></li>
+          <li class="nav__link underline"><a href="">Careers</a></li>
+          <li class="nav__link underline"><a href="">Events</a></li>
+          <li class="nav__link underline"><a href="">Products</a></li>
+          <li class="nav__link underline"><a href="">Support</a></li>
         </ul>
       </nav>
       <h1>Immersive experiences that deliver</h1>
@@ -89,29 +89,37 @@
           src="./images/logo.svg"
           alt="loopstudios en blanc et gras"
         />
-        <div>
-          <img class="icon" src="./images/icon-facebook.svg" alt="" />
-          <img class="icon" src="./images/icon-twitter.svg" alt="" />
-          <img class="icon" src="./images/icon-pinterest.svg" alt="" />
-          <img class="icon" src="./images/icon-instagram.svg" alt="" />
-        </div>
-      </div>
-      <div class="footer__containers">
         <ul>
-          <li><a href="">About</a></li>
-          <li><a href="">Careers</a></li>
-          <li><a href="">Events</a></li>
-          <li><a href="">Products</a></li>
-          <li><a href="">Support</a></li>
+          <li class="nav__link underline"><a href="">About</a></li>
+          <li class="nav__link underline"><a href="">Careers</a></li>
+          <li class="nav__link underline"><a href="">Events</a></li>
+          <li class="nav__link underline"><a href="">Products</a></li>
+          <li class="nav__link underline"><a href="">Support</a></li>
         </ul>
+      </div>
+      <div class="footer__containers right">
+        <div>
+          <img class="icon underline" src="./images/icon-facebook.svg" alt="" />
+          <img class="icon underline" src="./images/icon-twitter.svg" alt="" />
+          <img
+            class="icon underline"
+            src="./images/icon-pinterest.svg"
+            alt=""
+          />
+          <img
+            class="icon underline"
+            src="./images/icon-instagram.svg"
+            alt=""
+          />
+        </div>
         <p>© 2021 Loopstudios. All rights reserved.</p>
       </div>
-      <div class="attribution">
+      <!-- <div class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
         >. Coded by <a href="#">Your Name Here</a>.
-      </div>
+      </div> -->
     </footer>
     <!--  Night arcade Soccer team VR The grid From up above VR Pocket borealis
     The curiosity Make it fisheye -->
