--- a/index.html
+++ b/index.html
@@ -34,11 +34,15 @@
           <li class="nav__link underline"><a href="">Support</a></li>
         </ul>
       </nav>
-      <h1>Immersive experiences that deliver</h1>
+      <div class="title">
+        <h1>Immersive experiences that deliver</h1>
+      </div>
     </header>
     <main>
       <section class="interactive">
-        <img src="./images/desktop/image-interactive.jpg" alt="" />
+        <div class="interactive__image">
+          <!-- <img src="./images/desktop/image-interactive.jpg" alt="" /> -->
+        </div>
         <div class="interactive__description">
           <h2>The leader in interactive VR</h2>
           <p>
