section intercative ok for desktop

--- a/index.html
+++ b/index.html
@@ -40,9 +40,7 @@
     </header>
     <main>
       <section class="interactive">
-        <div class="interactive__image">
-          <!-- <img src="./images/desktop/image-interactive.jpg" alt="" /> -->
-        </div>
+        <div class="interactive__image"></div>
         <div class="interactive__description">
           <h2>The leader in interactive VR</h2>
           <p>
