--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       </section>
     </main>
     <footer>
-      <div class="footer__containers">
+      <div class="footer__left">
         <img
           class="logo"
           src="./images/logo.svg"
@@ -99,20 +99,20 @@
           <li class="nav__link underline"><a href="">Support</a></li>
         </ul>
       </div>
-      <div class="footer__containers right">
-        <div>
-          <img class="icon underline" src="./images/icon-facebook.svg" alt="" />
-          <img class="icon underline" src="./images/icon-twitter.svg" alt="" />
-          <img
-            class="icon underline"
-            src="./images/icon-pinterest.svg"
-            alt=""
-          />
-          <img
-            class="icon underline"
-            src="./images/icon-instagram.svg"
-            alt=""
-          />
+      <div class="footer__right">
+        <div class="icons">
+          <div class="icon underline">
+            <img src="./images/icon-facebook.svg" alt="" />
+          </div>
+          <div class="icon underline">
+            <img src="./images/icon-twitter.svg" alt="" />
+          </div>
+          <div class="icon underline">
+            <img src="./images/icon-pinterest.svg" alt="" />
+          </div>
+          <div class="icon underline">
+            <img src="./images/icon-instagram.svg" alt="" />
+          </div>
         </div>
         <p>© 2021 Loopstudios. All rights reserved.</p>
       </div>
