--- a/index.html
+++ b/index.html
@@ -58,28 +58,52 @@
         </div>
         <div class="creations__list">
           <div class="creation">
-            <h3>Deep earth</h3>
+            <img src="/images/desktop/image-deep-earth.jpg" alt="" />
+            <div class="creation__title">
+              <h3>Deep earth</h3>
+            </div>
           </div>
           <div class="creation">
-            <h3>Deep earth</h3>
+            <img src="/images/desktop/image-night-arcade.jpg" alt="" />
+            <div class="creation__title">
+              <h3>Night arcade</h3>
+            </div>
           </div>
           <div class="creation">
-            <h3>Deep earth</h3>
+            <img src="/images/desktop/image-soccer-team.jpg" alt="" />
+            <div class="creation__title">
+              <h3>Soccer team vr</h3>
+            </div>
           </div>
           <div class="creation">
-            <h3>Deep earth</h3>
+            <img src="/images/desktop/image-grid.jpg" alt="" />
+            <div class="creation__title">
+              <h3>The grid</h3>
+            </div>
           </div>
           <div class="creation">
-            <h3>Deep earth</h3>
+            <img src="/images/desktop/image-from-above.jpg" alt="" />
+            <div class="creation__title">
+              <h3>From up above vr</h3>
+            </div>
           </div>
           <div class="creation">
-            <h3>Deep earth</h3>
+            <img src="/images/desktop/image-pocket-borealis.jpg" alt="" />
+            <div class="creation__title">
+              <h3>Pocket borealis</h3>
+            </div>
           </div>
           <div class="creation">
-            <h3>Deep earth</h3>
+            <img src="/images/desktop/image-curiosity.jpg" alt="" />
+            <div class="creation__title">
+              <h3>The curiosity</h3>
+            </div>
           </div>
           <div class="creation">
-            <h3>Deep earth</h3>
+            <img src="/images/desktop/image-fisheye.jpg" alt="" />
+            <div class="creation__title">
+              <h3>Make it fisheye</h3>
+            </div>
           </div>
         </div>
       </section>
