--- a/index.html
+++ b/index.html
@@ -21,18 +21,21 @@
   </head>
   <body>
     <header>
-      <nav>
+      <nav class="navbar">
         <a href=""
           ><img src="./images/logo.svg" alt="loopstudios en blanc et gras"
         /></a>
 
-        <ul>
+        <ul class="menu">
           <li class="nav__link underline"><a href="">About</a></li>
           <li class="nav__link underline"><a href="">Careers</a></li>
           <li class="nav__link underline"><a href="">Events</a></li>
           <li class="nav__link underline"><a href="">Products</a></li>
           <li class="nav__link underline"><a href="">Support</a></li>
         </ul>
+        <div class="toggle-button">
+          <img class="toggle-button" src="./images/icon-hamburger.svg" alt="" />
+        </div>
       </nav>
       <div class="title">
         <h1>Immersive experiences that deliver</h1>
@@ -150,4 +153,5 @@
     <!--  Night arcade Soccer team VR The grid From up above VR Pocket borealis
     The curiosity Make it fisheye -->
   </body>
+  <script src="./index.js"></script>
 </html>
