--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
           <li class="nav__link underline"><a href="">Products</a></li>
           <li class="nav__link underline"><a href="">Support</a></li>
         </ul>
-        <div class="toggle-button">
-          <img class="toggle-button" src="./images/icon-hamburger.svg" alt="" />
-        </div>
+
+        <img class="toggle-button" src="./images/icon-hamburger.svg" alt="" />
       </nav>
       <div class="title">
         <h1>Immersive experiences that deliver</h1>
@@ -57,58 +56,83 @@
       <section class="creations">
         <div class="creations__title">
           <h2>Our creations</h2>
-          <button>See all</button>
+          <button class="button__top">See all</button>
         </div>
         <div class="creations__list">
           <div class="creation">
-            <img src="/images/desktop/image-deep-earth.jpg" alt="" />
+            <img
+              class="img1"
+              src="/images/desktop/image-deep-earth.jpg"
+              alt=""
+            />
             <div class="creation__title">
               <h3>Deep earth</h3>
             </div>
           </div>
           <div class="creation">
-            <img src="/images/desktop/image-night-arcade.jpg" alt="" />
+            <img
+              class="img2"
+              src="/images/desktop/image-night-arcade.jpg"
+              alt=""
+            />
             <div class="creation__title">
               <h3>Night arcade</h3>
             </div>
           </div>
           <div class="creation">
-            <img src="/images/desktop/image-soccer-team.jpg" alt="" />
+            <img
+              class="img3"
+              src="/images/desktop/image-soccer-team.jpg"
+              alt=""
+            />
             <div class="creation__title">
               <h3>Soccer team vr</h3>
             </div>
           </div>
           <div class="creation">
-            <img src="/images/desktop/image-grid.jpg" alt="" />
+            <img class="img4" src="/images/desktop/image-grid.jpg" alt="" />
             <div class="creation__title">
               <h3>The grid</h3>
             </div>
           </div>
           <div class="creation">
-            <img src="/images/desktop/image-from-above.jpg" alt="" />
+            <img
+              class="img5"
+              src="/images/desktop/image-from-above.jpg"
+              alt=""
+            />
             <div class="creation__title">
               <h3>From up above vr</h3>
             </div>
           </div>
           <div class="creation">
-            <img src="/images/desktop/image-pocket-borealis.jpg" alt="" />
+            <img
+              class="img6"
+              src="/images/desktop/image-pocket-borealis.jpg"
+              alt=""
+            />
             <div class="creation__title">
               <h3>Pocket borealis</h3>
             </div>
           </div>
           <div class="creation">
-            <img src="/images/desktop/image-curiosity.jpg" alt="" />
+            <img
+              class="img7"
+              src="/images/desktop/image-curiosity.jpg"
+              alt=""
+            />
             <div class="creation__title">
               <h3>The curiosity</h3>
             </div>
           </div>
           <div class="creation">
-            <img src="/images/desktop/image-fisheye.jpg" alt="" />
+            <img class="img8" src="/images/desktop/image-fisheye.jpg" alt="" />
             <div class="creation__title">
               <h3>Make it fisheye</h3>
             </div>
           </div>
         </div>
+        <button class="button__bottom">See all</button>
       </section>
     </main>
     <footer>
