--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
         <a href=""
           ><img src="./images/logo.svg" alt="loopstudios en blanc et gras"
         /></a>
-
         <ul class="menu">
           <li class="nav__link underline"><a href="">About</a></li>
           <li class="nav__link underline"><a href="">Careers</a></li>
@@ -33,13 +32,14 @@
           <li class="nav__link underline"><a href="">Products</a></li>
           <li class="nav__link underline"><a href="">Support</a></li>
         </ul>
-
         <img class="toggle-button" src="./images/icon-hamburger.svg" alt="" />
       </nav>
+
       <div class="title">
         <h1>Immersive experiences that deliver</h1>
       </div>
     </header>
+
     <main>
       <section class="interactive">
         <div class="interactive__image"></div>
@@ -59,74 +59,42 @@
           <button class="button__top">See all</button>
         </div>
         <div class="creations__list">
-          <div class="creation">
-            <img
-              class="img1"
-              src="/images/desktop/image-deep-earth.jpg"
-              alt=""
-            />
+          <div class="creation img1">
             <div class="creation__title">
               <h3>Deep earth</h3>
             </div>
           </div>
-          <div class="creation">
-            <img
-              class="img2"
-              src="/images/desktop/image-night-arcade.jpg"
-              alt=""
-            />
+          <div class="creation img2">
             <div class="creation__title">
               <h3>Night arcade</h3>
             </div>
           </div>
-          <div class="creation">
-            <img
-              class="img3"
-              src="/images/desktop/image-soccer-team.jpg"
-              alt=""
-            />
+          <div class="creation img3">
             <div class="creation__title">
               <h3>Soccer team vr</h3>
             </div>
           </div>
-          <div class="creation">
-            <img class="img4" src="/images/desktop/image-grid.jpg" alt="" />
+          <div class="creation img4">
             <div class="creation__title">
               <h3>The grid</h3>
             </div>
           </div>
-          <div class="creation">
-            <img
-              class="img5"
-              src="/images/desktop/image-from-above.jpg"
-              alt=""
-            />
+          <div class="creation img5">
             <div class="creation__title">
               <h3>From up above vr</h3>
             </div>
           </div>
-          <div class="creation">
-            <img
-              class="img6"
-              src="/images/desktop/image-pocket-borealis.jpg"
-              alt=""
-            />
+          <div class="creation img6">
             <div class="creation__title">
               <h3>Pocket borealis</h3>
             </div>
           </div>
-          <div class="creation">
-            <img
-              class="img7"
-              src="/images/desktop/image-curiosity.jpg"
-              alt=""
-            />
+          <div class="creation img7">
             <div class="creation__title">
               <h3>The curiosity</h3>
             </div>
           </div>
-          <div class="creation">
-            <img class="img8" src="/images/desktop/image-fisheye.jpg" alt="" />
+          <div class="creation img8">
             <div class="creation__title">
               <h3>Make it fisheye</h3>
             </div>
@@ -135,6 +103,7 @@
         <button class="button__bottom">See all</button>
       </section>
     </main>
+
     <footer>
       <div class="footer__left">
         <img
